# haggis

./: LICENSE  TODO  haggis.cabal
src/: Main.hs
src/Haggis/: AST.hs  Checker.hs  Interpreter.hs  Lexer.hs  Parser.hs  Types.hs
src/Haggis/Scoping/: Env.hs  Scope.hs
testsuite/programs/: test.haggis
